Mohican mnTranslations service proposal
Sample usage of mnTranslations service is in appHeader directive template

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/components/appHeader/template.html
+++ b/app/assets/javascripts/app/components/appHeader/template.html
@@ -12,50 +12,50 @@
       <mn-navbar-collapsible>
         <mn-navbar-collapsible-left>
           <mn-menu-item>
-            <mn-menu-item-route sref="base.start">Aloitus</mn-menu-item-route>
+            <mn-menu-item-route sref="base.start">{{vm.appHeaderTranslations.start.fn}}</mn-menu-item-route>
           </mn-menu-item>
-          <mn-menu-group mn-text="Toimitukset ja Siirtymät">
+          <mn-menu-group mn-text="{{vm.appHeaderTranslations.deliveryAndTransitionGroupTitle.fn}}">
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.deliveries">Toimitukset</mn-menu-item-route>
+              <mn-menu-item-route sref="base.deliveries">{{vm.appHeaderTranslations.deliveries.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.transitions">Siirtymät</mn-menu-item-route>
+              <mn-menu-item-route sref="base.transitions">{{vm.appHeaderTranslations.transitions.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.routes">Routes</mn-menu-item-route>
+              <mn-menu-item-route sref="base.routes">{{vm.appHeaderTranslations.routes.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
           </mn-menu-group>
           <mn-menu-item>
-            <mn-menu-item-route sref="base.design">Suunnittelu</mn-menu-item-route>
+            <mn-menu-item-route sref="base.design">{{vm.appHeaderTranslations.design.fn}}</mn-menu-item-route>
           </mn-menu-item>
           <mn-menu-item>
-            <mn-menu-item-route sref="base.map">Kartat</mn-menu-item-route>
+            <mn-menu-item-route sref="base.map">{{vm.appHeaderTranslations.map.fn}}</mn-menu-item-route>
           </mn-menu-item>
           <mn-menu-item>
-            <mn-menu-item-route sref="base.history">Historia</mn-menu-item-route>
+            <mn-menu-item-route sref="base.history">{{vm.appHeaderTranslations.history.fn}}</mn-menu-item-route>
           </mn-menu-item>
-          <mn-menu-group mn-text="Resurssit">
+          <mn-menu-group mn-text="{{vm.appHeaderTranslations.resourcesGroupTitle.fn}}">
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.resources">Resurssit</mn-menu-item-route>
+              <mn-menu-item-route sref="base.resources">{{vm.appHeaderTranslations.resources.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.timetables">Aikataulut</mn-menu-item-route>
+              <mn-menu-item-route sref="base.timetables">{{vm.appHeaderTranslations.timetables.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.links">Resurssilinkit</mn-menu-item-route>
+              <mn-menu-item-route sref="base.links">{{vm.appHeaderTranslations.links.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.groups">Resurssiryhmät</mn-menu-item-route>
+              <mn-menu-item-route sref="base.groups">{{vm.appHeaderTranslations.groups.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.hoursReports">Tuntiraportit</mn-menu-item-route>
+              <mn-menu-item-route sref="base.hoursReports">{{vm.appHeaderTranslations.hoursReports.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.hoursAccounting">Tuntikirjanpito</mn-menu-item-route>
+              <mn-menu-item-route sref="base.hoursAccounting">{{vm.appHeaderTranslations.hoursAccounting.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
           </mn-menu-group>
           <mn-menu-item>
-            <mn-menu-item-route sref="base.customers">Asiakkaat</mn-menu-item-route>
+            <mn-menu-item-route sref="base.customers">{{vm.appHeaderTranslations.customers.fn}}</mn-menu-item-route>
           </mn-menu-item>
         </mn-navbar-collapsible-left>
         <mn-navbar-collapsible-right>
