rename transitions => activities
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/components/appHeader/template.html
+++ b/app/assets/javascripts/app/components/appHeader/template.html
@@ -19,7 +19,7 @@
               <mn-menu-item-route sref="base.deliveries">{{vm.appHeaderTranslations.deliveries.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
-              <mn-menu-item-route sref="base.transitions">{{vm.appHeaderTranslations.transitions.fn}}</mn-menu-item-route>
+              <mn-menu-item-route sref="base.activities">{{vm.appHeaderTranslations.activities.fn}}</mn-menu-item-route>
             </mn-menu-group-item>
             <mn-menu-group-item>
               <mn-menu-item-route sref="base.routes">{{vm.appHeaderTranslations.routes.fn}}</mn-menu-item-route>
