routes definitions, controllers, tempaltes and resolved services in same folder
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -33,6 +33,6 @@
     -# %script
   %body(data-main-app ng-cloak role="document")
     %div.full_height
-      %mn-app-header
+      %id5-app-header
       %div.full_height(ui-view)
     = javascript_include_tag 'app'
