--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -2,6 +2,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "rails_bootstrap_forms";
+@import "includes/angular-multi-select";
 
 @media(max-width: $grid-float-breakpoint - 1 /*767px*/) {
   .navbar-text {
