mn-full-height and mn-fill-height
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -17,7 +17,7 @@
   }
 }
 
-[mn-full-size] {
+[mn-full-height] {
   background: #F6F6F6 url(<%= asset_path 'bg.png' %>) repeat-x;
 }
 mn-menu-item-route > a > span {
