--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -32,7 +32,7 @@
     -# If you need something from the Ruby code, set it up here
     -# %script
   %body(data-main-app ng-cloak role="document")
-    %div.full_height
+    %div.full_height.container-fluid(mn-full-height)
       %id5-app-header
       %div.full_height(ui-view)
     = javascript_include_tag 'app'
