--- a/app/assets/stylesheets/config.css.scss.erb
+++ b/app/assets/stylesheets/config.css.scss.erb
@@ -2,3 +2,4 @@ $grid-float-breakpoint: 1280px;
 $mn-menu-item-route-active-color: red;
 $mn-menu-item-route-hover-color: white;
 $mn-menu-item-route-color: #777777;
+$mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>";
