--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -18,7 +18,7 @@
 }
 
 [mn-full-height] {
-  background: #F6F6F6 url(<%= asset_path 'bg.png' %>) repeat-x;
+  background: #F6F6F6 url($mn-mn-full-height-backbround-image) repeat-x;
 }
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
