--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -2,3 +2,4 @@ $grid-float-breakpoint: 1280px !default;
 $mn-menu-item-route-active-color: red !default;
 $mn-menu-item-route-hover-color: white !default;
 $mn-menu-item-route-color: #777777 !default;
+$mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>" !default;
