--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -33,6 +33,6 @@
     -# %script
   %body(data-main-app ng-cloak role="document")
     %div.full_height.container-fluid(mn-full-height)
-      %id5-app-header
+      .header-wrapper(ng-include="'app/directives/id5AppHeader/template.html'")
       %div.full_height(ui-view)
     = javascript_include_tag 'app'
