quick fix: hide brand if it cannot fit
There is still issues for menu, between 496 and 1280px. This
needs to be addressed later.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -16,6 +16,18 @@
     margin-bottom: 0px;
   }
 }
+.mn-navbar-title {
+  height: 50px;
+  display: inline;
+}
+@media(max-width: $app-hide-title) {
+  .mn-navbar-title > a{
+    width: 5px;
+    img {
+      display: none;
+    }
+  }
+}
 
 [mn-full-height] {
   background: #F6F6F6 url($mn-mn-full-height-backbround-image) repeat-x;
