--- a/app/assets/stylesheets/config.css.scss.erb
+++ b/app/assets/stylesheets/config.css.scss.erb
@@ -1,3 +1,4 @@
+$app-hide-title: 496px;
 $grid-float-breakpoint: 1280px;
 $mn-menu-item-route-active-color: red;
 $mn-menu-item-route-hover-color: white;
