quick filter layout
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -36,6 +36,10 @@ mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
 }
+.filter-bar-button.active {
+  background-color: $mn-filter-bar-button-active-bg-color;
+  color: $mn-filter-bar-button-active-text-color;
+}
 
 mn-menu-item-route > a:not(.mn-menu-item-route-active) > span:hover,
 mn-menu-group > li > a:hover,
