--- a/app/assets/stylesheets/config.css.scss.erb
+++ b/app/assets/stylesheets/config.css.scss.erb
@@ -4,3 +4,5 @@ $mn-menu-item-route-active-color: red;
 $mn-menu-item-route-hover-color: white;
 $mn-menu-item-route-color: #777777;
 $mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>";
+$mn-filter-bar-button-active-bg-color: #428bca;
+$mn-filter-bar-button-active-text-color: white;
