--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -3,3 +3,5 @@ $mn-menu-item-route-active-color: red !default;
 $mn-menu-item-route-hover-color: white !default;
 $mn-menu-item-route-color: #777777 !default;
 $mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>" !default;
+$mn-filter-bar-button-active-bg-color: #428bca !default;
+$mn-filter-bar-button-active-text-color: white !default;
