:arrow_down::arrow_up: quick sort layout
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -29,6 +29,12 @@
   }
 }
 
+mn-grid th.mn-sortable {
+  border-style: solid !important;
+  border-width: 1px !important;
+  border-color: black !important;
+}
+
 [mn-full-height] {
   background: #F6F6F6 url($mn-mn-full-height-backbround-image) repeat-x;
 }
