--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -5,3 +5,4 @@ $mn-menu-item-route-color: #777777 !default;
 $mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>" !default;
 $mn-filter-bar-button-active-bg-color: #428bca !default;
 $mn-filter-bar-button-active-text-color: white !default;
+$mn-grid-layout-row: 20px !default;
