--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -34,6 +34,7 @@ mn-grid th.mn-sortable {
   border-width: 1px !important;
   border-color: black !important;
 }
+.mn-grid-layout-row { margin-top: $mn-grid-layout-row; }
 
 [mn-full-height] {
   background: #F6F6F6 url($mn-mn-full-height-backbround-image) repeat-x;
