styled pager border if shows clinet side filter results
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -6,3 +6,4 @@ $mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>" !default;
 $mn-filter-bar-button-active-bg-color: #428bca !default;
 $mn-filter-bar-button-active-text-color: white !default;
 $mn-grid-layout-row: 20px !default;
+$grid-client-pager-border-color: #e5c720 !default;
