--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -159,3 +159,9 @@ mn-menu-group > li > a:focus, .nav .open > a, .nav .open > a:hover, .nav .open >
 .pager-row {
   padding-top: 12px;
 }
+
+.client-pager {
+  border-color: $grid-client-pager-border-color;
+  border-style: solid;
+  border-width: 1px;
+}
