--- a/app/assets/stylesheets/config.css.scss.erb
+++ b/app/assets/stylesheets/config.css.scss.erb
@@ -6,4 +6,5 @@ $mn-menu-item-route-color: #777777;
 $mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>";
 $mn-filter-bar-button-active-bg-color: #428bca;
 $mn-filter-bar-button-active-text-color: white;
-$mn-grid-layout-row: 20px
+$mn-grid-layout-row: 20px;
+$grid-client-pager-border-color: #e5c720;
