mn-qf-date-range directive
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -3,6 +3,7 @@
 @import "bootstrap";
 @import "rails_bootstrap_forms";
 @import "includes/angular-multi-select";
+@import "includes/daterangepicker-bs3";
 
 @media(max-width: $grid-float-breakpoint - 1 /*767px*/) {
   .navbar-text {
