select filter css
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -30,6 +30,12 @@
   }
 }
 
+.mn-select-filter button {
+  max-height: 34px !important;
+  max-width: 117px;
+  width: 117px;
+}
+
 mn-grid th.mn-sortable {
   border-style: solid !important;
   border-width: 1px !important;
