debug: added a lot of traces
We should leave this commit in here for alog time, no need to
remove it. Notice that DEBUG flag is set to false, so to see
traces, enable them.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/config.js.erb
+++ b/app/assets/javascripts/mohican/config.js.erb
@@ -1,2 +1,12 @@
+var DEBUG = false;
+function trace(text) {
+  if(DEBUG) {
+    console.log(text);
+  }
+}
+function trace_timestamp(text) {
+  trace(Date.now() + " - " + text);
+}
+
 window.MN_LANGUAGE = '<%= I18n.default_locale.to_s  %>';
 window.MN_ENV = '<%= Rails.env %>';
