use environment to activate traces
Start rails as:

    $ trace=1 bundle exec rails s

or then if you are really confident about your environment
leave the bundle exec out. By default, however, no traces would
show even in development.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/config.js.erb
+++ b/app/assets/javascripts/mohican/config.js.erb
@@ -1,4 +1,4 @@
-var DEBUG = false;
+var DEBUG = <%= ENV['trace'] ? 'true' : 'false' %>;
 function trace(text) {
   if(DEBUG) {
     console.log(text);
