client sort and filter loading notification
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -4,6 +4,7 @@
 @import "rails_bootstrap_forms";
 @import "includes/angular-multi-select";
 @import "includes/daterangepicker-bs3";
+@import "includes/css-spinner";
 
 @media(max-width: $grid-float-breakpoint - 1 /*767px*/) {
   .navbar-text {
@@ -204,4 +205,3 @@ mn-menu-group > li > a:focus, .nav .open > a, .nav .open > a:hover, .nav .open >
 .grid-header-field-dir {
   margin-right: 0px;
 }
-
