mn-filter-bar css styles
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -62,6 +62,22 @@ mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
   text-decoration: none;
 }
+
+.filter-bar-item {
+  display: inline;
+  float: left;
+  clear: none;
+  margin: 0px 4px 0px 0px;
+}
+
+.filter-bar-alert {
+  padding: 4px 4px 4px 4px;
+}
+
+.filter-bar-button {
+  height: 36px;
+}
+
 .filter-bar-button.active {
   background-color: $mn-filter-bar-button-active-bg-color;
   color: $mn-filter-bar-button-active-text-color;
