--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -1,6 +1,8 @@
 @import "config";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "rails_bootstrap_forms";
 @import "includes/angular-multi-select";
 @import "includes/daterangepicker-bs3";
