filter bar multi-select width
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -85,6 +85,10 @@ mn-menu-item-route > a > span {
   color: $mn-filter-bar-button-active-text-color;
 }
 
+.filter-bar-item span.multiSelect > button {
+  width: 135px;
+}
+
 mn-menu-item-route > a:not(.mn-menu-item-route-active) > span:hover,
 mn-menu-group > li > a:hover,
 mn-menu-item-route > a:hover {
