--- a/app/assets/javascripts/config.js.erb
+++ b/app/assets/javascripts/config.js.erb
@@ -3,10 +3,16 @@ window.ID5_ENV = '<%= Rails.env %>';
 
 window.MN_LANGUAGES = {};
 window.MN_LANGUAGES.en = {};
+if(!window.MN_BASE) {
+  window.MN_BASE = '/api';
+}
+if(!window.MN_LOGIN) {
+  window.MN_LOGIN = '/users/sign_in';
+}
 
 <%# Following line is there to initialize I18n, so translations are loaded
     before they are to_json-ized. %>
 <% I18n.t(:init) %>
 
-window.MN_LANGUAGES.fi = 
+window.MN_LANGUAGES.fi =
   <%= I18n.backend.send(:translations)[I18n.default_locale].to_json %>;
