injection with declaration
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -58,7 +58,7 @@ mn-grid th.mn-sortable {
 .mn-grid-layout-row { margin-top: $mn-grid-layout-row; }
 
 [mn-full-height] {
-  background: #F6F6F6 url($mn-mn-full-height-backbround-image) repeat-x;
+  //background: #F6F6F6 url($mn-mn-full-height-backbround-image) repeat-x;
 }
 mn-menu-item-route > a > span {
   color: $mn-menu-item-route-color;
