nicer place for menu
That previous folder was hidious. Two levels down for one file.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -33,6 +33,6 @@
     -# %script
   %body(data-main-app ng-cloak role="document")
     %div.full_height.container-fluid(mn-full-height)
-      .header-wrapper(ng-include="'app/directives/id5AppHeader/template.html'")
+      .header-wrapper(ng-include="'app/menu.html'")
       %div.full_height(ui-view)
     = javascript_include_tag 'app'
