--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -26,7 +26,6 @@
       [ng-cloak] {
         display: none;
       }
-    -#
     = stylesheet_link_tag    'app', media: 'all'
     = csrf_meta_tags
     -# If you need something from the Ruby code, set it up here
@@ -35,4 +34,6 @@
     %div.full_height.container-fluid(mn-full-height)
       .header-wrapper(ng-include="'app/menu.html'")
       %div.full_height(ui-view)
+    = javascript_include_tag 'config'
+    = javascript_include_tag 'mohican'
     = javascript_include_tag 'app'
