Manually merge changes from vdev on mnGrid
...and activitiesGrid toolbar and filter bar and header layout.

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -1,5 +1,6 @@
-$app-hide-title: 496px;
+$app-hide-title: 496px !default;
 $grid-float-breakpoint: 1260px !default;
+$mn-content-container-bg-color: #fff !default;
 $mn-menu-item-route-active-color: red !default;
 $mn-menu-item-route-hover-color: white !default;
 $mn-menu-item-route-color: #777777 !default;
@@ -11,4 +12,5 @@ $mn-filter-bar-button-active-text-color: #333 !default;
 $mn-qfilter-subheader-background: linear-gradient(to top,#00796B,#86CA87 8px);
 $mn-content-header-background: linear-gradient(#36B7FF,#85CEF2);
 $mn-grid-header-container-bg: linear-gradient(#AEF6BF,#96D098);
+$mn-grid-layout-row: 0px;
 $grid-client-pager-border-color: #e5c720 !default;
