Parametrize main brand logo fully in config.css

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -1,11 +1,13 @@
 $app-hide-title: 496px !default;
 $grid-float-breakpoint: 1260px !default;
+$mn-brand-height: 42px !default;
+$mn-brand-width: 145px !default;
+$mn-brand-bg: url(<%= asset_path 'logo.png' %>) no-repeat center !default;
 $mn-content-container-bg-color: #fff !default;
 $mn-menu-item-route-active-color: red !default;
 $mn-menu-item-route-hover-color: white !default;
 $mn-menu-item-route-color: #777777 !default;
 $mn-button-label-pad: 4px 1px 4px 1px !default;
-$mn-mn-full-height-backbround-image: "<%= asset_path 'bg.png' %>" !default;
 $mn-filter-bar-button-brdr-color: #E1E1E1 !default;
 $mn-filter-bar-button-bg-color: #428bca !default;
 $mn-filter-bar-button-active-text-color: #333 !default;
