ngDialog - edit item example
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -7,6 +7,8 @@
 @import "includes/angular-multi-select";
 @import "includes/daterangepicker-bs3";
 @import "includes/css-spinner";
+@import "includes/ng-dialog";
+@import "includes/ng-dialog-theme-default";
 
 @media(max-width: $grid-float-breakpoint - 1 /*767px*/) {
   .navbar-text {
