--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -229,3 +229,19 @@ mn-menu-group > li > a:focus, .nav .open > a, .nav .open > a:hover, .nav .open >
 .grid-header-field-dir {
   margin-right: 0px;
 }
+
+.mn-context-menu {
+  position: absolute;
+  z-index:999999;
+}
+
+.mn-context-menu-cover {
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,0);
+  z-index:999998;
+  cursor:default;
+}
