css: styling context menu to be visible
These CSS changes make the context menu more visible when on top
of the grid.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -1,3 +1,5 @@
+
+
 $app-hide-title: 496px !default;
 $grid-float-breakpoint: 1260px !default;
 $mn-brand-height: 42px !default;
@@ -16,3 +18,10 @@ $mn-content-header-background: linear-gradient(#36B7FF,#85CEF2);
 $mn-grid-header-container-bg: linear-gradient(#AEF6BF,#96D098);
 $mn-grid-layout-row: 0px;
 $grid-client-pager-border-color: #e5c720 !default;
+
+$popup-menu-background-color: #85CEF2 !default;
+$popup-menu-color: #333333 !default;
+$popup-menu-border-color: #039be5 !default;
+$popup-menu-background-color-hover: #36B7FF !default;
+$popup-menu-color-hover: $popup-menu-color !default;
+$popup-menu-border-color-hover: $popup-menu-border-color !default;
