--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -430,3 +430,14 @@ mn-item-reports > div {
   z-index:999998;
   cursor:default;
 }
+
+.mn-context-menu > .btn-default {
+  color: $popup-menu-color;
+  background-color: $popup-menu-background-color;
+  border-color: $popup-menu-border-color;
+}
+.mn-context-menu > .btn-default:hover {
+  color: $popup-menu-color-hover;
+  background-color: $popup-menu-background-color-hover;
+  border-color: $popup-menu-border-color-hover;
+}
