css fix: always use !default in mohican/config.css
It is crucial not to 'hard-code' anything in mohican css
configuration, as application's own config.css should be
able to redefine **anything**. Modifier (or whatever it is
called) !default does not make any change to resulting CSS
if it is not overridden in something that is loaded before
it, and that is exactly how application's config.css can
override it.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -13,9 +13,9 @@ $mn-button-label-pad: 4px 1px 4px 1px !default;
 $mn-filter-bar-button-brdr-color: #E1E1E1 !default;
 $mn-filter-bar-button-bg-color: #428bca !default;
 $mn-filter-bar-button-active-text-color: #333 !default;
-$mn-qfilter-subheader-background: linear-gradient(to top,#00796B,#86CA87 8px);
-$mn-content-header-background: linear-gradient(#36B7FF,#85CEF2);
-$mn-grid-header-container-bg: linear-gradient(#AEF6BF,#96D098);
+$mn-qfilter-subheader-background: linear-gradient(to top,#00796B,#86CA87 8px) !default;
+$mn-content-header-background: linear-gradient(#36B7FF,#85CEF2) !default;
+$mn-grid-header-container-bg: linear-gradient(#AEF6BF,#96D098) !default;
 $mn-grid-layout-row: 0px;
 $grid-client-pager-border-color: #e5c720 !default;
 
