--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -19,9 +19,9 @@ $mn-grid-header-container-bg: linear-gradient(#AEF6BF,#96D098) !default;
 $mn-grid-layout-row: 0px;
 $grid-client-pager-border-color: #e5c720 !default;
 
-$popup-menu-background-color: #85CEF2 !default;
-$popup-menu-color: #333333 !default;
-$popup-menu-border-color: #039be5 !default;
-$popup-menu-background-color-hover: #36B7FF !default;
-$popup-menu-color-hover: $popup-menu-color !default;
-$popup-menu-border-color-hover: $popup-menu-border-color !default;
+$mn-popup-menu-background-color: #85CEF2 !default;
+$mn-popup-menu-color: #333333 !default;
+$mn-popup-menu-border-color: #039be5 !default;
+$mn-popup-menu-background-color-hover: #36B7FF !default;
+$mn-popup-menu-color-hover: $mn-popup-menu-color !default;
+$mn-popup-menu-border-color-hover: $mn-popup-menu-border-color !default;
