--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -432,12 +432,12 @@ mn-item-reports > div {
 }
 
 .mn-context-menu > .btn-default {
-  color: $popup-menu-color;
-  background-color: $popup-menu-background-color;
-  border-color: $popup-menu-border-color;
+  color: $mn-popup-menu-color;
+  background-color: $mn-popup-menu-background-color;
+  border-color: $mn-popup-menu-border-color;
 }
 .mn-context-menu > .btn-default:hover {
-  color: $popup-menu-color-hover;
-  background-color: $popup-menu-background-color-hover;
-  border-color: $popup-menu-border-color-hover;
+  color: $mn-popup-menu-color-hover;
+  background-color: $mn-popup-menu-background-color-hover;
+  border-color: $mn-popup-menu-border-color-hover;
 }
