use mn- color scheme to define layout colors
The idea behind this commit is to define a minimum of colors that
are used accross the app and application developer can simply
pick different colors and replace them in only one place.

But also, the underlying logic is to define a constant such as
#123456 in only one place, never in two. Notice that still
individual usage of that color can be overriden elsewhere.

This commit contains also a small example fix: all colors should be
defined in config.css and never in mohican.css, so they can be
overriden!

And of course everything in config.css (as well as mohican.css)
should be defined with !default so it can be overriden.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -1,4 +1,6 @@
-
+$mn-coloscheme-11: #85CEF2 !default;
+$mn-coloscheme-12: #36B7FF !default;
+$mn-coloscheme-13: #039be5 !default;
 
 $app-hide-title: 496px !default;
 $grid-float-breakpoint: 1260px !default;
@@ -14,14 +16,17 @@ $mn-filter-bar-button-brdr-color: #E1E1E1 !default;
 $mn-filter-bar-button-bg-color: #428bca !default;
 $mn-filter-bar-button-active-text-color: #333 !default;
 $mn-qfilter-subheader-background: linear-gradient(to top,#00796B,#86CA87 8px) !default;
-$mn-content-header-background: linear-gradient(#36B7FF,#85CEF2) !default;
+$mn-content-header-background: linear-gradient($mn-coloscheme-12,$mn-coloscheme-11) !default;
 $mn-grid-header-container-bg: linear-gradient(#AEF6BF,#96D098) !default;
-$mn-grid-layout-row: 0px;
+$mn-grid-layout-row: 0px !default;
 $grid-client-pager-border-color: #e5c720 !default;
 
-$mn-popup-menu-background-color: #85CEF2 !default;
+
+$mn-filter-bar-dropDown-background-color: $mn-coloscheme-13 !default;
+
+$mn-popup-menu-background-color: $mn-coloscheme-11 !default;
 $mn-popup-menu-color: #333333 !default;
 $mn-popup-menu-border-color: #039be5 !default;
-$mn-popup-menu-background-color-hover: #36B7FF !default;
+$mn-popup-menu-background-color-hover: $mn-coloscheme-12 !default;
 $mn-popup-menu-color-hover: $mn-popup-menu-color !default;
 $mn-popup-menu-border-color-hover: $mn-popup-menu-border-color !default;
