--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -99,7 +99,7 @@ a.navbar-brand.active, a.navbar-brand:focus {
 }
 
 .filter-bar-dropDown button, .QfRow button {
-  background: #039be5;
+  background-color: $mn-filter-bar-dropDown-background-color;
   border-radius: 3px;
   border:0;
   box-shadow: 2px 2px #006064;
