--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
         .container-fluid
           .navbar-header.pull-left
             %a.navbar-brand(href="#")
-              =image_tag "mohicanUI_logoB.jpg", height: '50'
+              =image_tag "logo.png", height: '50'
               #{'id5'.capitalize}
         -#
           -# Sticky menu, on the right
