zeljko's too simple dialog
As our ng-view does not have a wrapping template, so we need to manually
add a sorcerer directive, which is basically invisible sitting there but
when called in the action it sprungs out some HTML wrapper with our given
template inside.

In an actual applications there could be more than one dialog - and this
should handle that case, but is not tested, it can easily be tested
via two options in the menu bar and two templates.

The use of templates is really good solution here as dialogs can, and
probably will be very long and putting them elsewhere might make ugly code.

Included CSS is very ugly but points out some positioning hacks to make
this doable. Still positioning needs to be properly done via JS.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -483,3 +483,51 @@ mn-item-reports > div {
 .accent0 {
   color:$mn-colorscheme-0A !important;
 }
+
+.mn-context-menu-cover, .mn-dialog-frame-cover {
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,0);
+  z-index:999998;
+  cursor:default;
+}
+
+.mn-dialog-frame-cover {
+  background:rgba(0,0,0,0.2);
+}
+
+.mn-dialog-frame {
+  position:fixed;
+  top:200px;
+  left:200px;
+  width:500px;
+  height:500px;
+  z-index:999999;
+  background-color: green;
+  padding: 20px;
+}
+
+.mn-dialog-close-button {
+  position:absolute;
+  top:0px;
+  right:0px;
+  width:30px;
+  height:30px;
+  background-color: red;
+  z-index:1999999;
+}
+
+.mn-context-menu > .btn-default {
+  color: $mn-popup-menu-color;
+  background-color: $mn-popup-menu-background-color;
+  border-color: $mn-popup-menu-border-color;
+}
+
+.mn-context-menu > .btn-default:hover {
+  color: $mn-popup-menu-color-hover;
+  background-color: $mn-popup-menu-background-color-hover;
+  border-color: $mn-popup-menu-border-color-hover;
+}
