--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -505,13 +505,16 @@ mn-item-reports > div {
 .mn-dialog-frame {
   position:fixed;
   z-index:1999;
-  background-color: green;
-  padding: 30px 45px;
+  // padding: 30px 45px;
   //margin: 30px;
   * {
     z-index:9999;
     position:relative;
   }
+}
+
+.mn-dialog-content {
+  padding: 30px 45px;
 }
 
 .mn-dialog-close-button {
@@ -520,7 +523,9 @@ mn-item-reports > div {
   right:0px;
   width:30px;
   height:30px;
-  background-color: red;
+  // margin-top: 10px;
+  // margin-right: 10px;
+  color: silver;
   z-index:2999;
 }
 
