Grid footer bootstrap responsive, status hiding on -xs

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -3,7 +3,8 @@ $mn-colorscheme-1L: #85CEF2 !default;
 $mn-colorscheme-1M: #36B7FF !default;
 $mn-colorscheme-1D: #039be5 !default;
 $mn-colorscheme-1V: #428bca !default;
-// color 1Pale, 1Light, 1Medium, 1Dark, 1Very dark
+$mn-colorscheme-1A: #FF8616 !default;
+// color 1Pale, 1Light, 1Medium, 1Dark, 1Very dark, 1Accent(contrast color)
 $mn-colorscheme-2L: #AEF6BF !default;
 $mn-colorscheme-2M: #96D098 !default;
 $mn-colorscheme-2D: #86CA87 !default;
